--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "ITerm2/iterm2-borderless"]
 	path = ITerm2/iterm2-borderless
 	url = https://github.com/Nasga/iterm2-borderless.git
+[submodule "zsh-syntax-highlighting"]
+	path = zsh-syntax-highlighting
+	url = https://github.com/zsh-users/zsh-syntax-highlighting.git
