--- a/tmux.conf
+++ b/tmux.conf
@@ -2,9 +2,10 @@
 # vim:set ft=conf et sw=4 tw=80:
 
 #use C-a, since it's on the home row and easier to hit than C-b
-set-option -g prefix C-a
-unbind-key C-b
-bind-key C-a send-prefix
+#set-option -g prefix C-a
+#unbind-key C-b
+#bind-key C-a send-prefix
+
 set -g base-index 1
 
 # vi is good
