Add tmux bind to source tmux.conf

--- a/tmux.conf
+++ b/tmux.conf
@@ -22,6 +22,7 @@ set-option -g default-terminal "screen-256color-bce"
 bind-key : command-prompt
 bind-key r refresh-client
 bind-key L clear-history
+bind-key b source ~/.tmux.conf
 
 bind-key space next-window
 bind-key bspace previous-window
