--- a/tmux.conf
+++ b/tmux.conf
@@ -87,6 +87,10 @@ set-option -g default-command "reattach-to-user-namespace -l zsh"
 
 # Allow the arrow key to be used immediately after changing windows
 set-option -g repeat-time 0
+
+# Remove timeout delay on escape
+set -sg escape-time 0
+
 #### COLOUR (Solarized 256)
 
 # default statusbar colors
