--- a/tmux.conf
+++ b/tmux.conf
@@ -33,6 +33,8 @@ bind-key v split-window -h
 bind-key s split-window -v
 
 # smart pane switching with awareness of vim splits
+# Requires vim-tmux-navigator plugin for vim
+# https://github.com/christoomey/vim-tmux-navigator
 bind -n C-h run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-h) || tmux select-pane -L"
 bind -n C-j run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-j) || tmux select-pane -D"
 bind -n C-k run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-k) || tmux select-pane -U"
