--- a/tmux.conf
+++ b/tmux.conf
@@ -61,7 +61,7 @@ bind-key ] paste-buffer
 bind-key y run "tmux save-buffer - | reattach-to-user-namespace pbcopy"
 
 # Show clock in lower right corner
-set-window-option display-panes-time 1500
+set-window-option -g display-panes-time 1500
 
 # Status Bar
 set-option -g status-interval 1
