Add history-substring-search tmux conf

--- a/tmux.conf
+++ b/tmux.conf
@@ -74,6 +74,8 @@ set-option -g repeat-time 0
 # Remove timeout delay on escape
 set -sg escape-time 0
 
+# ZSH Navigations Tools binding
+bind h run-shell -b "$ZNT_REPO_DIR/znt-tmux.zsh"
 
 ### Colors (Solarized 256)
 
