Use readline for tmux cmd

--- a/tmux.conf
+++ b/tmux.conf
@@ -23,7 +23,9 @@ bind -n S-Right next-window
 
 # Use vi-mode keys
 setw -g mode-keys vi
-set -g status-keys vi
+
+# Use emacs mode for tmux command prompt
+set -g status-keys emacs
 
 # Enable mouse
 setw -g mode-mouse on
