Change prefix-r to prefix-R to reload tmux config

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,6 +1,6 @@
-# Reload this config with prefix-r
-unbind r
-bind r source-file ~/.tmux.conf
+# Reload this config with prefix-R
+unbind R
+bind R source-file ~/.tmux.conf
 
 # Start window indexing at 1 instead of 0
 setw -g base-index 1
