Add new Tmux config options

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,3 +1,7 @@
+# utf8 is on
+set -g utf8 on
+set -g status-utf8 on
+
 # Reload this config with prefix-R
 unbind R
 bind R source-file ~/.tmux.conf
@@ -50,11 +54,7 @@ bind-key C-l send-keys 'C-l'
 bind-key + select-layout main-horizontal
 bind-key = select-layout main-vertical
 set-window-option -g other-pane-height 25
-set-window-option -g other-pane-width  80
-
-# Use the current directory when opening a new pane
-bind-key % split-window -h -c "#{pane_current_path}"
-bind-key '"' split-window -c "#{pane_current_path}"
+set-window-option -g other-pane-width  85
 
 # Status bar
 set-option -g status-interval 1
@@ -66,15 +66,27 @@ set-option -g status-fg default
 # Show clock in lower right
 set-window-option -g display-panes-time 1500
 
+# tmux messages are displayed for 4 seconds
+set -g display-time 4000
+
 # Set window notifications
 setw -g monitor-activity on
 set -g visual-activity off
+
+# focus events enabled for terminals that support them
+set -g focus-events on
+
+# for improved experience with grouped sessions and multimonitor setup
+setw -g aggressive-resize on
 
 # Allow arrow key to be used immediately after changing windows
 set-option -g repeat-time 0
 
 # Remove timeout delay on escape
 set -sg escape-time 0
+
+# increase scrollback buffer size
+set -g history-limit 50000
 
 # ZSH Navigations Tools binding
 bind h run-shell -b "$ZNT_REPO_DIR/znt-tmux.zsh"
