--- a/tmux.conf
+++ b/tmux.conf
@@ -126,7 +126,10 @@ set-option -g display-panes-colour colour166 #orange
 # clock
 set-window-option -g clock-mode-colour colour64 #green
 
-### Tmux Plugin Manager (TPM)
+### Tmux Plugin Manager (TPM) - https://github.com/tmux-plugins/tpm
 set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
+
 run '~/.tmux/plugins/tpm/tpm'
