Add new tmux bindings

--- a/tmux.conf
+++ b/tmux.conf
@@ -50,6 +50,26 @@ bind-key C-j send-keys 'C-j'
 bind-key C-k send-keys 'C-k'
 bind-key C-l send-keys 'C-l'
 
+# easier and faster switching between next/prev window
+bind C-p previous-window
+bind C-n next-window
+
+# pane resizing
+bind-key -r H resize-pane -L "5"
+bind-key -r J resize-pane -D "5"
+bind-key -r K resize-pane -U "5"
+bind-key -r L resize-pane -R "5"
+
+# pane splitting
+bind-key "|" split-window -h -c "#{pane_current_path}"
+bind-key "-" split-window -v -c "#{pane_current_path}"
+bind-key "%" split-window -h -c "#{pane_current_path}"
+bind-key '"' split-window -v -c "#{pane_current_path}"
+
+# pane swapping
+bind-key -r "<" swap-window -t -1
+bind-key -r ">" swap-window -t +1
+
 # Quick layout switching
 bind-key + select-layout main-horizontal
 bind-key = select-layout main-vertical
