Fix Tmux config

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,6 +1,6 @@
 # utf8 is on
-set -g utf8 on
-set -g status-utf8 on
+#set -g utf8 on
+#set -g status-utf8 on
 
 # Reload this config with prefix-R
 unbind R
@@ -96,9 +96,6 @@ set -g visual-activity off
 # focus events enabled for terminals that support them
 set -g focus-events on
 
-# for improved experience with grouped sessions and multimonitor setup
-setw -g aggressive-resize on
-
 # Allow arrow key to be used immediately after changing windows
 set-option -g repeat-time 0
 
@@ -148,8 +145,13 @@ set-window-option -g clock-mode-colour colour64 #green
 
 ### Tmux Plugin Manager (TPM) - https://github.com/tmux-plugins/tpm
 set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 
 run '~/.tmux/plugins/tpm/tpm'
+
+# Fix iTerm tmux integration. Needs to go after running tpm
+set-window-option -g aggressive-resize off
+
